# supply-drop-bbs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  cliff.toml  config.example.toml  install.sh  release.toml  rust-toolchain.toml  rustfmt.toml  supply-drop-bbs.service
.cargo/: config.toml
.claude/: launch.json
.github/: FUNDING.yml
.sqlx/: query-0293ac5e9427686babbce9f164d59a0e6056eebfe655ddfd694e5baf33c5d16c.json  query-0375d7179ab385c3d6cb597272dff43c328d9023524946362a4552f37e669176.json  query-03cdc59732f9bd857819940ef44694106601d6f0e1ebe942f3eb1ea28e924599.json  query-05b5c3d13018056715135b5421a948d6dffd89addc1652878ef187b64faaf01e.json  query-140a0ad95c70b11c05dfa1981460413e8fff53eed0158138818b9cb0c877395c.json  query-1499d105204493d9230786f15abd1291248a852221b7774e3d1d606a9cf09d87.json  query-19a94715237fdb54271464b1639b5c0711ac99dee4a4d4854a3f3602878aab91.json  query-1c79c14016357e78eee1ddca9586781d44d75abb8631928a9cb114bef68ae1b4.json  query-214738bc28217b00c1156c8ef493452093eeaa4d234741a008ff3ba9aee8352c.json  query-21a10d97d644ec22aeaf988dc53d9744e4cfa1d68b50a17fd12fac70754a97b3.json  query-21ea60a3525d1b5d5bcc7dba8f4ff11f7613ecbab6e0fd1f61b699a4b3e980e2.json  query-23719a84e377af1044e5d68fa3a500a3fae377374fc8f65442b9733246af8156.json  query-2ab54adb19a36e4301382e2f4f4efd33f891173ac67625e839aa9aaca87c8a33.json  query-2ee3d7d0db4cca43cc8757b26f536262aa2dc2537b169064d5ff0b01818fd6c7.json  query-40c99405fe87d217d13779f55d6547c26c355e5197e60ac462814d8cf9380380.json  query-464f6ab783d493bafa1eb135ecac45acdbdbcf676fb2976045c7c5fe29f7d170.json  query-46fecbff117587561ed3e2a449ed14279ee08de0f0891dd9e6c121774e5c4490.json  query-54fe3de4eab21393d6c7f826901352e52a5bc386d4ceb7a187f9b0eb6e8ca42c.json  query-5dc543ac9dab7f3ab08b29dcc1f762a32d47be35ccdbd6cd924ef6e34fa9db94.json  query-681b921a2600de239a80b9cd233a3db003dc6924f1bc9de5b9f3de66f9bc46f8.json  query-69267a97cdf2eef65bac3c56e7c47ebe7b5a124da782f5111f211f79db040de4.json  query-70430989b58a23743d6512a5e1021527557d185a6179213ad47c764dd6b3fae1.json  query-74ec23fc44cb0d3438e7b9a48a23b86b84e2c50045f3a93c1291c8af2442c75f.json  query-7cec7525c2387e8bdad53dfdecc5e1a54ae5abef881627b272af696d01e349ea.json  query-7eaa23216da6c4f0dd126ee46526d417cc910b3e798d3f754dce71450f0d367b.json  query-7ec64c890162753470d3134b17fb00d9e94792f97d363c42cffe4f025cec5eb4.json  query-839185e73a8c3512d2adc48374229d636536311f3cdee22f4d77091ab3f6295b.json  query-8abea9ec6f159276ebaf7bcc563031e75f81f380b2fda06696a16d3db10ebe8b.json  query-92ec192bc3343abeb89a80770d491941dd588a32f4555653ad20eb8a0d0c5b9f.json  query-9a4de1cbb9d17bba100bb9943520799fc835a60807fb5182a967533001c30ccf.json  query-9c6ee3e66b53c4b7d79327486453b80fb1f860d308053818607490baffbb26de.json  query-9e4b0c3238da28d0337e3fb75a3f929f0ad01e98e7be31d0fd3c048059e71f14.json  query-a00ba0bc0e8385835fecd4046a24c399d98c12b4c575b7de749ae7fbd2f8e25c.json  query-a094ce1d9909bc0d155b169699fc6582ace07603fac2716efb3c8460d9581964.json  (+15 more)
contrib/: fake-host  fake-host-scenario.jsonl
crates/bbs-cli/: Cargo.toml
crates/bbs-cli/src/: lib.rs
crates/bbs-cli/tests/: transport.rs
crates/bbs-core/: Cargo.toml  bbs-dev.db
crates/bbs-core/migrations/: 0001_initial.sql  0002_seed_system_rooms.sql  0003_user_blocks.sql  0004_add_sysop_system_rooms.sql  0005_add_indexes.sql  0006_node_credentials.sql  0007_audit_log.sql  0008_lowercase_usernames.sql  0009_fix_case_collision_accounts.sql  0010_node_credential_full_pubkey.sql  0011_must_change_password.sql  0012_delivery_samples.sql  0013_delivery_samples_retransmits.sql
crates/bbs-core/src/: host.rs  ids.rs  lib.rs  mesh_name.rs  message.rs  room.rs  timestamp.rs  user.rs
crates/bbs-core/src/db/: admin_queries.rs  audit_store.rs  block_store.rs  credential_store.rs  delivery_store.rs  error.rs  invariants.rs  message_store.rs  mod.rs  node_credential_store.rs  pragmas.rs  room_store.rs  user_store.rs
crates/bbs-core/tests/: message_store.proptest-regressions  message_store.rs  user_store.rs
crates/bbs-hello-transport/: Cargo.toml
crates/bbs-hello-transport/src/: lib.rs
crates/bbs-mesh/: Cargo.toml
crates/bbs-mesh/examples/: deliverability_repro.rs
crates/bbs-mesh/src/: command.rs  config.rs  lib.rs  metrics.rs  presets.rs  send_tracker.rs  session.rs  transport.rs
crates/bbs-mesh/tests/: transport.rs
crates/bbs-meshtastic/: Cargo.toml
crates/bbs-meshtastic/src/: command.rs  lib.rs  proto.rs  session.rs  stream.rs
crates/bbs-plugin-api/: Cargo.toml
crates/bbs-plugin-api/src/: admin.rs  advert.rs  command.rs  error.rs  event.rs  host.rs  identity.rs  lib.rs  permissions.rs  plugin.rs  registry.rs  testing.rs  transport.rs
crates/bbs-plugin-api/tests/: worked_example.rs
crates/bbs-process-transport/: Cargo.toml
crates/bbs-process-transport/src/: ipc.rs  lib.rs  manager.rs  transport.rs
crates/bbs-process-transport/tests/: process.rs
crates/bbs-process-transport/tests/fixtures/: echo_plugin.rs
crates/bbs-web/: Cargo.toml  build.rs
crates/bbs-web/src/: error_tracker.rs  lib.rs  log_capture.rs  metrics.rs  rss_monitor.rs
crates/bbs-web/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/bbs-web/web/src/: App.vue  main.ts  router.ts  styles.css  theme.ts
crates/bbs-web/web/src/api/: client.ts
crates/bbs-web/web/src/components/: AppNav.vue  DataTable.vue  ToastStack.vue
crates/bbs-web/web/src/composables/: useTheme.ts  useToast.ts
crates/bbs-web/web/src/pages/: AdvertsPage.vue  AuditPage.vue  BackupsPage.vue  DashboardPage.vue  ErrorsPage.vue  LoginPage.vue  LogsPage.vue  MessagesPage.vue  MetricsPage.vue  PluginsPage.vue  ReportsPage.vue  RoomsPage.vue  SessionsPage.vue  SettingsPage.vue  UsersPage.vue
crates/bbs-web/web/src/stores/: auth.ts  stats.ts  transports.ts
crates/bbs-web/web/src/utils/: datetime.ts
crates/meshcore-companion/: Cargo.toml
crates/meshcore-companion/src/: client.rs  constants.rs  error.rs  frame.rs  lib.rs  types.rs
crates/meshcore-companion/tests/: client.rs  codec.rs
(+49 files in other folders)
