[package]
name = "supply-drop-bbs"
description = "A bulletin-board system for LoRa mesh networks"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false                       # we don't publish to crates.io

[[bin]]
name = "supply-drop-bbs"
path = "src/main.rs"

# ─── Cargo features ───────────────────────────────────────────────
#
# Plugins are selected at compile time, not at runtime. See
# docs/adr/0004-cargo-features-not-runtime-plugins.md for the
# rationale. Operators wanting an unusual combination build from
# source with `cargo build --release --features <list>`.
[features]
default               = ["transport-cli", "transport-mesh", "transport-meshtastic", "admin-web", "transport-process"]
transport-cli         = ["dep:bbs-cli"]
transport-mesh        = ["dep:bbs-mesh", "dep:meshcore-companion"]
transport-meshtastic  = ["dep:bbs-meshtastic"]
admin-web             = ["dep:bbs-web"]
transport-process     = ["dep:bbs-process-transport"]

[dependencies]
mimalloc.workspace        = true
bbs-core.workspace        = true
bbs-plugin-api.workspace  = true
bbs-cli              = { workspace = true, optional = true }
bbs-mesh             = { workspace = true, optional = true }
bbs-meshtastic       = { workspace = true, optional = true }
bbs-web              = { workspace = true, optional = true }
bbs-process-transport = { workspace = true, optional = true }
meshcore-companion   = { workspace = true, optional = true }
clap.workspace            = true
dirs.workspace            = true
figment.workspace         = true
serde.workspace           = true
thiserror.workspace       = true
tokio.workspace           = true
toml.workspace            = true
toml_edit.workspace       = true
tracing.workspace            = true
tracing-subscriber.workspace = true
sysinfo.workspace            = true
dialoguer.workspace          = true
tokio-serial.workspace       = true
time.workspace               = true

[lints]
workspace = true

# ──────────────────────────────────────────────────────────────────
# Workspace
# ──────────────────────────────────────────────────────────────────

[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
version = "0.9.9"
edition      = "2021"
authors      = ["Mesh-America"]
repository   = "https://github.com/Mesh-America/supply-drop-bbs"
rust-version = "1.88"

# Shared dependencies. As we add real deps (sqlx, axum, etc.) they
# go here so every workspace member uses the same version.
[workspace.dependencies]
bbs-core              = { path = "crates/bbs-core",              version = "0.9.9" }
bbs-plugin-api        = { path = "crates/bbs-plugin-api",        version = "0.9.9" }
bbs-cli               = { path = "crates/bbs-cli",               version = "0.9.9" }
bbs-mesh              = { path = "crates/bbs-mesh",              version = "0.9.9" }
bbs-meshtastic        = { path = "crates/bbs-meshtastic",        version = "0.9.9" }
bbs-web               = { path = "crates/bbs-web",              version = "0.9.9" }
bbs-process-transport = { path = "crates/bbs-process-transport", version = "0.9.9" }
meshcore-companion    = { path = "crates/meshcore-companion",    version = "0.9.9" }

# Third-party deps. We use loose version constraints (semver-major)
# so cargo can pick patch updates; the lockfile pins the exact
# version actually built. When updating any of these, do it in a
# dedicated PR with the changelog read.
async-trait = "0.1"
clap        = { version = "4", features = ["derive", "env"] }
dirs        = "5"
figment     = { version = "0.10", features = ["toml", "env"] }
proptest    = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
toml        = "0.8"
# `time` is the modern Rust datetime library. `serde-well-known`
# pulls in the RFC3339 helpers we use for Timestamp.
time        = { version = "0.3", features = ["serde", "serde-well-known", "macros"] }
tokio       = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio-serial       = "5"
dialoguer          = "0.11"
sqlx        = { version = "0.8", features = ["sqlite", "runtime-tokio", "time", "macros"] }
argon2      = { version = "0.5", features = ["std"] }
tempfile    = "3"
tracing     = "0.1"
uuid        = { version = "1", features = ["v4", "serde"] }
axum        = { version = "0.7", features = ["macros", "json"] }
axum-extra  = { version = "0.9", features = ["cookie"] }
tower-http  = { version = "0.5", features = ["cors", "set-header"] }
rust-embed  = { version = "8" }
mime_guess  = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
zip         = { version = "2", default-features = false, features = ["deflate"] }
toml_edit   = { version = "0.22", features = ["serde"] }
sysinfo     = { version = "0.33", default-features = false, features = ["system", "disk", "network"] }
mimalloc    = { version = "0.1", default-features = false }

# Workspace-wide lint config. Applied to every member crate via
# `[lints] workspace = true` in their Cargo.toml. Centralising here
# means a contributor changing lint policy has one file to edit.
[workspace.lints.rust]
unsafe_code   = "forbid"      # we don't need it; if we do, that's an ADR
missing_docs  = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all          = { level = "warn", priority = -1 }
# We deliberately skip clippy::pedantic — too noisy for v1. Specific
# pedantic lints can be opted into per-crate as we encounter cases
# where they pull their weight.

# ──────────────────────────────────────────────────────────────────
# Release profile tuning
# ──────────────────────────────────────────────────────────────────
[profile.release]
# LTO trades build time for runtime speed and binary size. For a Pi
# deployment, smaller + faster wins.
lto           = "thin"
codegen-units = 1
strip         = "symbols"
# Don't panic-abort: we want backtraces in the field. The size cost
# is tiny.
panic         = "unwind"

# A faster dev-build profile for the inner loop of contributors.
[profile.dev]
opt-level = 0

# When CI builds release binaries we want them as small as possible.
# This profile is for release-ready artifacts; CI uses it in tag
# builds. Inherits from release; overrides where stricter.
[profile.release-min]
inherits      = "release"
opt-level     = "z"           # optimise for size
lto           = "fat"         # full LTO for maximum dead-code elimination
panic         = "abort"       # drop unwind tables (~50–100 KB savings)
overflow-checks = false       # no debug assertions in min builds
