[package]
name        = "bbs-cli"
description = "CLI transport plugin for Supply Drop BBS (Unix-domain socket)"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true
license-file = "../../LICENSE"
publish      = false

[dependencies]
bbs-core.workspace       = true
bbs-plugin-api.workspace = true

[lints]
workspace = true
