[package]
name        = "bbs-cli"
description = "CLI transport plugin for Supply Drop BBS (Unix-domain socket)"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true
license-file = "../../LICENSE"
publish      = false

[dependencies]
bbs-plugin-api.workspace = true
async-trait.workspace    = true
serde.workspace          = true
thiserror.workspace      = true
tracing.workspace        = true
tokio = { workspace = true, features = ["net", "io-util"] }

[dev-dependencies]
bbs-plugin-api = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
