[package]
name        = "bbs-core"
description = "Domain types, persistence, and business logic for Supply Drop BBS"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true
license-file = "../../LICENSE"
publish      = false

[dependencies]
# bbs-core implements the Host trait, so it depends on the
# contract crate. Plugins do too — but only one of them owns the
# concrete impl, and that's us.
bbs-plugin-api.workspace = true

argon2.workspace      = true
async-trait.workspace = true
serde.workspace       = true
sqlx.workspace        = true
thiserror.workspace   = true
time.workspace        = true
tokio.workspace       = true
toml_edit.workspace   = true
tracing.workspace     = true

[dev-dependencies]
proptest    = { workspace = true }
serde_json  = { workspace = true }
tempfile    = { workspace = true }
tokio       = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
