[package]
name        = "bbs-mesh"
description = "MeshCore transport plugin for Supply Drop BBS"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true
license-file = "../../LICENSE"
publish      = false

[dependencies]
bbs-core.workspace           = true
bbs-plugin-api.workspace     = true
meshcore-companion.workspace = true
async-trait.workspace = true
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
tracing.workspace     = true
# sync (Mutex, watch) + rt (spawn) are the only extras we need on top of workspace defaults.
tokio = { workspace = true, features = ["sync", "rt"] }

[dev-dependencies]
# Drive a real BbsHost through the bridge in integration tests (reproduce
# transport↔host session/workflow interactions that MockHost can't model).
tempfile.workspace = true

[lints]
workspace = true
