[package]
name             = "bbs-meshtastic"
description      = "Meshtastic transport plugin for Supply Drop BBS (protocol stub — codec not yet implemented)"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
repository.workspace = true
rust-version.workspace = true
license-file     = "../../LICENSE"
publish          = false

[dependencies]
bbs-plugin-api = { workspace = true }
async-trait    = { workspace = true }
serde          = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[lints]
workspace = true
