[package]
name             = "bbs-meshtastic"
description      = "Meshtastic transport plugin for Supply Drop BBS"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
repository.workspace = true
rust-version.workspace = true
license-file     = "../../LICENSE"
publish          = false

[dependencies]
bbs-plugin-api = { workspace = true }
async-trait    = { workspace = true }
prost          = { workspace = true }
serde          = { workspace = true }
tokio          = { workspace = true, features = ["io-util", "net", "sync", "time"] }
tokio-serial   = { workspace = true }
tracing        = { workspace = true }

[lints]
workspace = true
