[package]
name        = "bbs-plugin-api"
description = "The plugin contract for Supply Drop BBS: traits and types every plugin compiles against"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true
license-file = "../../LICENSE"
publish      = false

# This crate is the contract — keep it small. Plugins depend on it
# directly. Heavy dependencies don't belong here.

[dependencies]
async-trait.workspace = true
serde.workspace       = true
# Light, ubiquitous, and already in the graph. Used for the
# `TransportStats` snapshot type that transports expose to the admin UI.
serde_json.workspace  = true
thiserror.workspace   = true
tokio.workspace       = true

[dev-dependencies]
# Tokio with the full feature set for tests (we use the macro
# attributes for #[tokio::test]).
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
