[package]
name            = "bbs-process-transport"
description     = "Externally-spawned transport plugin support for Supply Drop BBS"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
repository.workspace  = true
rust-version.workspace = true
license-file    = "../../LICENSE"

[dependencies]
bbs-plugin-api.workspace = true
async-trait.workspace    = true
serde.workspace          = true
serde_json.workspace     = true
thiserror.workspace      = true
tokio            = { workspace = true, features = ["process", "io-util"] }
toml_edit.workspace      = true
tracing.workspace        = true

[lints]
workspace = true
