[package]
name            = "bbs-process-transport"
description     = "Externally-spawned transport plugin support for Supply Drop BBS"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
repository.workspace  = true
rust-version.workspace = true
license-file    = "../../LICENSE"

[dependencies]
bbs-plugin-api.workspace = true
async-trait.workspace    = true
serde.workspace          = true
toml.workspace           = true
serde_json.workspace     = true
thiserror.workspace      = true
tokio            = { workspace = true, features = ["process", "io-util", "fs"] }
toml_edit.workspace      = true
tracing.workspace        = true

[[bin]]
name = "echo_plugin"
path = "tests/fixtures/echo_plugin.rs"

[dev-dependencies]
bbs-plugin-api.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
