[package]
name        = "bbs-web"
description = "Web admin UI plugin for Supply Drop BBS (default OFF)"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true
license-file = "../../LICENSE"
publish      = false

[dependencies]
bbs-core.workspace       = true
bbs-plugin-api.workspace = true
async-trait.workspace    = true
serde.workspace          = true
serde_json.workspace     = true
thiserror.workspace      = true
tracing.workspace            = true
tracing-subscriber.workspace = true
uuid.workspace           = true
time.workspace           = true
tokio = { workspace = true, features = ["net", "macros", "time"] }
axum.workspace           = true
axum-extra.workspace     = true
tower-http.workspace     = true
rust-embed.workspace     = true
mime_guess.workspace     = true
tokio-stream.workspace   = true
toml.workspace           = true
toml_edit.workspace      = true
zip.workspace            = true

[lints]
workspace = true
